--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/react-router-dom": "^5.3.3",
     "appwrite": "^18.1.1",
     "date-fns": "^4.1.0",
